shellControls: bugfix overlapping controls

--- a/less/acorn-player.less
+++ b/less/acorn-player.less
@@ -668,7 +668,8 @@ input {
     }
 
     .shell-controls {
-      .position-absolutely(15px, 0px, 0px);
+      position: absolute;
+      top: 15px;
     }
 
     .loops-button {
